--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ lxml==4.5.0
 mysqlclient==1.4.6
 openpyxl==2.4.9
 Pillow==7.0.0
-pkg-resources==0.0.0
+#pkg-resources==0.0.0
 premailer==3.6.1
 python-dateutil==2.8.1
 pytz==2019.3
