--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ djangocms-style==2.3.0
 djangocms-text-ckeditor==3.9.0
 djangocms-video==2.3.0
 django-storages==1.10
+django-storages-azure==1.6.8
 easy-thumbnails==2.7
 et-xmlfile==1.0.1
 fhir.resources==5.0.1
